FlightPath 5.x Changelog
========================

2017-08-09
  Added a new option to Configure School Settings -- "prevent_course_assignment_to_both_degree_and_track".  If set to "Yes", then
  a course cannot be assigned to both a Level-1 degree and one of its direct tracks.  Ex:  ENGL and ENGL|_track1.  It is set to "yes" by
  default.
  

2017-07-25
  Made all major_code fields in the database be varchar(100), just to cover any weird ones which may be above 20 chars (the old limit).
  
 
2017-07-18
  Added extra CSS classes to course rows which were created from split substitutions.


2017-07-05
  Modified the admin_copy_degree_submit function to store degree id's in the form_state, for
  other modules to use.  Same for the admin_duplicate_year_form

2017-07-02
  Added new hook for when a new degree plan is loaded:  hook_degree_plan_load(&$degree)
  

2017-06-30
  Large overhaul to the degree edit screen.  In addition to being 100% FAPI now, you can add new
  semester blocks on demand, rather than having to save and refresh the page for more.  You can
  also delete a semester block.  Also, when a new degree is created, the first four semester blocks
  are created by default.  
  

2017-06-27
  Fixed bug where form parameters not being stored as hidden variables in the form were causing
  the $form_state['values'] to be incomplete.  Specifically on the degree edit form.


2017-06-21
  Made it to where if the SESSION var "scroll_top" is set, the value will be respected.  This allows
  FAPI forms to set the scroll top (like the degree edit form)


2017-06-19
  Tweaked the reduce_whitespace function to make it slightly smarter.
  
  Working on new FormAPI form for editing degrees.
  

2017-06-17
  Fixed bug where remainder hours on a split substitution were showing as the full hours
  in Excess credit.


2017-04-21
  Added a new behavior to when FlightPath saves advising session from POST.  Instead of